app/globals.css
@font-face {
  font-family: "Rebels";
  src: url("/fonts/Rebels-Fett.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-display: var(--font-rebels);
  --font-mono: var(--font-roboto-mono);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-pop: var(--pop);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-success: var(--success);
  --color-warning: var(--warning);

  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-active: var(--sidebar-accent-hover);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --spacing-gap: var(--gap);
  --spacing-sides: var(--sides);
  --spacing-header-mobile: var(--header-mobile);

  --ease-anticipate: cubic-bezier(1, -0.4, 0.35, 0.95);

  --animate-marquee-up: marquee-up 6s ease-in-out infinite;
  --animate-marquee-down: marquee-down 6s ease-in-out infinite;
  --animate-marquee-pulse: marquee-pulse 3s ease-in-out infinite;

  --animate-marquee-pulse: marquee-pulse 1s linear infinite;
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --border: oklch(0.922 0 0);
  --pop: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);

  --success: oklch(0.7775 0.2447 144.9);
  --destructive: oklch(0.577 0.245 27.325);
  --warning: oklch(0.769 0.188 70.08);

  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);

  --gap: 2rem;
  --sides: 1rem;
  --header-mobile: 3.8rem;
}

.dark {
  --background: oklch(0.2029 0.0037 345.62);
  --foreground: oklch(0.9851 0 0);
  --card: oklch(0.2029 0.0037 345.62);
  --card-foreground: oklch(0.9851 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.4703 0.2364 263.19);
  --primary-foreground: oklch(0.9851 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.2393 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.9851 0 0 / 5%);
  --accent-foreground: oklch(0.985 0 0);
  --border: oklch(1 0 0 / 10%);
  --pop: oklch(0.9851 0 0 / 2.5%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);

  --success: oklch(0.7775 0.2447 144.9);
  --warning: oklch(0.769 0.188 70.08);
  --destructive: oklch(0.5961 0.2006 36.48);

  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);

  --sidebar: oklch(0.2029 0.0037 345.62);
  --sidebar-foreground: oklch(0.9851 0 0);
  --sidebar-primary: oklch(0.4703 0.2364 263.19);
  --sidebar-primary-foreground: oklch(0.9851 0 0);
  --sidebar-accent: oklch(0.9851 0 0 / 5%);
  --sidebar-accent-hover: oklch(0.9851 0 0 / 10%);
  --sidebar-accent-foreground: oklch(0.9851 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50 overscroll-none;
  }
  body {
    @apply bg-muted text-foreground font-mono;
  }
}

.recharts-cartesian-grid-vertical :first-child,
.recharts-cartesian-grid-vertical :last-child {
  opacity: 0;
}

@media (min-width: 1028px) {
  html {
    font-size: 0.7em;
  }
}

@media (min-width: 1240px) and (max-width: 1920px) {
  html {
    font-size: 0.75em;
  }
}

@media (min-width: 1920px) {
  html {
    font-size: 1em;
  }
}

@media (min-width: 2160px) {
  html {
    font-size: 1.2em;
  }
}

/* Stat Marquee Animations */
@keyframes marquee-up {
  0% {
    transform: translate3d(0, 0, 0);
  }
  100% {
    transform: translate3d(0, -50%, 0);
  }
}
/* ... */

